[package]
name = "mntn"
version = "0.1.0"
authors = ["Dirk Gadsden <dirk@esherido.com>"]

[dependencies]
env_logger = "0.3.5"
freetype = { git = "https://github.com/servo/rust-freetype", rev = "26c523b" }
log = "0.3.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.2", features = ["exception"] }
cocoa = "0.5.2"
core-graphics = "0.4.2"
